<resources>
    <string name="app_name">lab1_semak7</string>
    <string name="ds_add">Создать</string>
    <string name="add">Создать</string>
    <string name="add_ds">Добавить</string>
    <string name="sort">Сортировка</string>
    <string name="balance">Балансировка</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить СД</string>
    <string name="cancel">Отмена</string>
    <string name="add_sorted">Добавить с сортировкой</string>
    <string name="find_by_header">Найти по заголовку</string>
    <string name="remove_by_index">Удалить по индексу В СПИСКЕ</string>
    <string name="log_headers">Логировать бошки</string>
    <string name="add_by_index">Вставить по индексу</string>
</resources>