<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="прикалываемся:)"
            app:titleTextColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/creation_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_panel_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_blue_dark"
            android:text="@string/add_ds" />

        <Button
            android:id="@+id/btn_sort"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_blue_dark"
            android:text="@string/sort" />

        <Button
            android:id="@+id/btn_balance"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_blue_dark"
            android:text="@string/balance" />

        <Button
            android:id="@+id/btn_save_json"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_blue_dark"
            android:text="@string/save" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_panel_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">



        <Button
            android:id="@+id/btn_add_sorted"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_blue_dark"
            android:text="@string/add_sorted" />

        <Button
            android:id="@+id/btn_find_by_header"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_blue_dark"
            android:text="@string/find_by_header" />

        <Button
            android:id="@+id/btn_log_headers"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_green_dark"
            android:text="@string/log_headers" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_panel_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <Button
            android:id="@+id/btn_add_by_index"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_by_index"
            app:strokeColor="@android:color/holo_blue_dark" />


        <Button
            android:id="@+id/btn_delete_list"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_dark"
            app:strokeColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/btn_remove_by_index"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_by_index"
            app:strokeColor="@android:color/holo_red_dark" />

    </LinearLayout>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>